--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
-div[id:top]{
-    color: #ffffff;
+#top{
+    background-color: #8d3e3e;
+    width: 100%;
+    height: 100px;
 }
+
+img#menu {
+    align-items: left;
+    height: 100px;
+    padding-right: 35%;
+}
+
+img#logo {
+    align-items: center;
+    height: 90px;
+    padding-right: 40%;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: aliceblue;   
+}
+
+.flex > div {
+    flex: 1 1 200px;
+    padding: 10px;
+}
+
+img#prod {
+    width: 300px;
+}
+
+
