--- a/telas/index.css
+++ b/telas/index.css
@@ -1,18 +1,20 @@
+
+
 #top{
-    background-color: #8d3e3e;
+    background-color: #ffffff;
     width: 100%;
-    height: 100px;
+    height: 10%;
 }
 
 img#menu {
     align-items: left;
-    height: 100px;
-    padding-right: 35%;
+    height: 90px;
+    padding-right: 30%;
 }
 
 img#logo {
     align-items: center;
-    height: 90px;
+    height: 10%;
     padding-right: 40%;
 }
 
